--- a/Code360.Web/Views/_ViewImports.cshtml
+++ b/Code360.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Code360.Web
 @using Code360.Web.Models
+@using Code360.Web.Areas.Student.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
